--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "react-scripts test",
+    "start": "vite",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.0",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
@@ -28,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
